Fixed some html layout issues on smaller screens

--- a/index.css
+++ b/index.css
@@ -61,4 +61,5 @@ a:focus {
 .btn {
   border-width: 3px;
   border-color: #555555;
+  box-shadow: none !important;
 }
